--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: eclectic
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Miscellaneous functions for bioinformatics data
 Version: 0.1
 Date: 2015-09-10
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: Erik Clarke
+Maintainer: Erik Clarke <erikclarke@gmail.com>
+Description: Random collections of functions relating to plotting, reading data,
+  and working with count data.
+License: GPL
 LazyData: TRUE
+RoxygenNote: 5.0.1
