added a bunch of ggplot2 heatmap help functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ Description: Random collections of functions relating to plotting, reading data,
 License: GPL
 LazyData: TRUE
 RoxygenNote: 5.0.1
+Imports:
+  ggplot2
