--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,20 @@ Date: 2015-09-10
 Author: Erik Clarke
 Maintainer: Erik Clarke <erikclarke@gmail.com>
 Description: Random collections of functions relating to plotting, reading data,
-  and working with count data.
+    and working with count data.
 License: GPL
 LazyData: TRUE
 RoxygenNote: 5.0.1
 Suggests:
-  knitr,
-  ggplot2
+    knitr,
+    ggplot2,
+    polyafit
+Imports:
+    dplyr,
+    broom,
+    lazyeval,
+    purrr,
+    qiimer,
+    tidyr
+Collate:
+    'eclectic.R'
