added subcolor_pal for grouped factor coloring

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(polyatest)
 export(read_blast6)
 export(saturated_rainbow_cts)
 export(saturated_rainbow_pct)
+export(subcolor_pal)
 export(subset_matrix)
 export(tax_climber)
 import(dplyr)
