cleaned up package structure, added a refinement to subcolor_pal, added reorder_taxa fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(na_zeros)
 export(named_vector)
 export(polyatest)
 export(read_blast6)
+export(reorder_taxa)
 export(saturated_rainbow_cts)
 export(saturated_rainbow_pct)
 export(subcolor_pal)
