feat: add min_rank function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(counts_matrix)
 export(dynamic_chunk)
 export(heatmap_dims)
 export(make_square)
+export(min_rank)
 export(na_zeros)
 export(named_vector)
 export(polyatest)
